<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_tracker"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFF00"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txtFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:textSize="18sp"
                android:textColor="#FFFF00" />

            <TextView
                android:id="@+id/txtFoodExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_total_expense"
                android:textSize="18sp"
                android:textColor="#FFFF00"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btnFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_foods"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txtTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transport"
                android:textSize="18sp"
                android:textColor="#FFFF00" />

            <TextView
                android:id="@+id/txtTransportExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_total_expense"
                android:textSize="18sp"
                android:textColor="#FFFF00"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btnTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_transports"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txtShopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping"
                android:textSize="18sp"
                android:textColor="#FFFF00" />

            <TextView
                android:id="@+id/txtShoppingExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_total_expense"
                android:textSize="18sp"
                android:textColor="#FFFF00"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btnShopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_shoppings"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txtTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tax"
                android:textSize="18sp"
                android:textColor="#FFFF00" />

            <TextView
                android:id="@+id/txtTaxExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_total_expense"
                android:textSize="18sp"
                android:textColor="#FFFF00"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btnTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tax"
                android:layout_marginTop="20dp"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_expense"
        android:textSize="18sp"
        android:textColor="#FFFF00"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/txtTotalExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_total_expense"
        android:textSize="18sp"
        android:textColor="#FFFF00"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"/>

</LinearLayout>
