<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <!-- Expense Entry Heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/expense_entry"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFF00"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp" />

    <!-- Amount EditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp">

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/enter_amount"
            android:inputType="number"
            android:autofillHints="amount"
            android:imeOptions="actionDone"
            android:textColor="#FFFF00"
            android:textColorHint="#FFFF00"
            android:textSize="18sp" />

    </LinearLayout>


    <!-- Done Button -->
    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/done"
        android:textColor="#FFFF00"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>
